--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
 <body>
 
     <h1>Let's Try JavaScript!</h1>
+    <nav>
+      <h2>JavaScript Practice Navigation</h2>
+      <ul>
+        <li>
+          <a href="index.html">
+            Home
+          </a>
+        </li>
+        <li>
+          <a href="dom-events.html">
+            JS DOM and Events
+          </a>
+        </li>
+      </ul>
+    </nav>
     
 </body>
 </html>
