Add DOM manipulation example(s).

--- a/dom-events.html
+++ b/dom-events.html
@@ -31,5 +31,18 @@
       </li>
     </ul>
   </nav>
+  <h2 id="target-me">DOM Target Practice</h2>
+<p>
+    <button>
+        Hover here to test an event!
+    </button>
+    <span> This text changes bsaed on a hover</span>
+
+    <button>
+        Click here to test an event!
+    </button>
+
+    <span> this text changes on a click</span>
+</p>
 </body>
 </html>
