added some new elements

--- a/index.html
+++ b/index.html
@@ -1,38 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Let's Try JavaScript</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Let's Try JavaScript!</title>
 
-    <!-- Style(s)-->
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+  <!-- Style(s) -->
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 
-    <!-- Script(s) -->
+  <!-- Script(s) -->
   <script
-  type="text/JavaScript"
-  src="js/scripts.js"
-  defer></script><!-- "defer" will wait to execute the JS until after the page is loaded. -->
-
+    type="text/JavaScript"
+    src="js/scripts.js"
+    defer></script><!-- "defer" will wait to execute the JS until after the page is loaded. -->
 </head>
 <body>
-
-    <h1>Let's Try JavaScript!</h1>
-    <nav>
-      <h2>JavaScript Practice Navigation</h2>
-      <ul>
-        <li>
-          <a href="index.html">
-            Home
-          </a>
-        </li>
-        <li>
-          <a href="dom-events.html">
-            JS DOM and Events
-          </a>
-        </li>
-      </ul>
-    </nav>
-    
+  <h1>Let's Try JavaScript!</h1>
+  <nav>
+    <h2>JavaScript Practice Navigation</h2>
+    <ul>
+      <li>
+        <a href="index.html">
+          Home
+        </a>
+      </li>
+      <li>
+        <a href="dom-events.html">
+          JS DOM and Events
+        </a>
+      </li>
+      <li>
+        <a href="dom-events-form.html">
+          JS DOM Events Form
+        </a>
+      </li>
+      <li>
+        <a href="oop.html">
+          JS OOP
+        </a>
+      </li>
+      <li>
+        <a href="ajax-api.html">
+          AJAX / API
+        </a>
+      </li>
+    </ul>
+  </nav>
 </body>
 </html>
