--- a/ajax-api.html
+++ b/ajax-api.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JavaScript DOM and Events</title>
+  <title>AJAX and API</title>
 
   <!-- Style(s) -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 
   <!-- Script(s) -->
   <script
     type="text/JavaScript"
-    src="js/dom-events.js"
+    src="js/ajax-api.js"
     defer></script>
 </head>
 <body>
-  <h1>JavaScript DOM and Events</h1>
+  <h1>AJAX and API</h1>
   <nav>
     <h2>JavaScript Practice Navigation</h2>
     <ul>
@@ -46,16 +46,13 @@
       </li>
     </ul>
   </nav>
-  <h2 id="target-me">DOM Target Practice</h2>
-  <p>
-    <button title="Hover here, and look at the text to see the result.">
-      Hover Here To Test an Event!
-    </button>
-    <span>This text changes based on a hover.</span>
-    <button>
-      Click Here To Test an Event!
-    </button>
-    <span>This text changes based on a click.</span>
-  </p>
+  <h2> International Space Station Position</h2>
+  <dl>
+      <dt> Latitude</dt>
+      <dd id= "lat"> 0.000</dd>
+      <dt>Longitude</dt>
+      <dd id="long"></dd>
+  </dl>
+  <h2>People in Space</h2>
 </body>
 </html>
