--- a/dom-events-form.html
+++ b/dom-events-form.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JavaScript DOM and Events</title>
+  <title>JavaScript DOM / Events / Form</title>
 
   <!-- Style(s) -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 
   <!-- Script(s) -->
   <script
     type="text/JavaScript"
-    src="js/dom-events.js"
+    src="js/dom-events-form.js"
     defer></script>
 </head>
 <body>
-  <h1>JavaScript DOM and Events</h1>
+  <h1>JavaScript DOM / Events / Form</h1>
   <nav>
     <h2>JavaScript Practice Navigation</h2>
     <ul>
@@ -46,16 +46,13 @@
       </li>
     </ul>
   </nav>
-  <h2 id="target-me">DOM Target Practice</h2>
-  <p>
-    <button title="Hover here, and look at the text to see the result.">
-      Hover Here To Test an Event!
-    </button>
-    <span>This text changes based on a hover.</span>
-    <button>
-      Click Here To Test an Event!
-    </button>
-    <span>This text changes based on a click.</span>
-  </p>
+  <form action="#">
+    <label for="your-name">
+      Your Name
+    </label>
+    <input type="text" id="your-name" value="">
+    <input type="submit" value="Say Hello">
+  </form>
+  <ul id="hello-list"></ul>
 </body>
 </html>
